--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -8,6 +8,9 @@ siteName: YourSiteName
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{siteName}} | {{ title }}</title>
+  <link rel="stylesheet" href="{{ '/css/typography.css' | url }}">
+  <link rel="stylesheet" href="{{ '/css/layout.css' | url }}">
+  <link rel="stylesheet" href="{{ '/css/card.css' | url }}">
   <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
 </head>
 <body>
